# scientific-computing-rs

./: Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
src/: main.rs
