[package]
name = "scientific-computing-rs"
version = "0.1.0"
edition = "2024"
authors = ["Feng Liang <feng.liang@alumni.kaust.edu.sa>"]

[dependencies]
tch = "0.20.0"
rayon = "1.10.0"
num_cpus = "1.17.0"
nalgebra = {version = "0.33.2", features = ["rand"]}
rand = "0.8.5"
burn = {version = "0.18.0", features = ["ndarray", "std"], default-features = false}
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
