[package]
name = "scientific-computing-rs"
version = "0.1.1"
edition = "2024"
authors = ["Feng Liang <feng.liang@alumni.kaust.edu.sa>"]

[dependencies]
tch = { version =  "0.21.0", git = "https://github.com/LaurentMazare/tch-rs.git" }
rayon = "1.10.0"
num_cpus = "1.17.0"
nalgebra = {version = "0.34.0", features = ["rand"]}
rand = { version = "0.9.2", features = ["thread_rng"] }
rand_distr = "0.5.1"
burn = {version = "0.18.0", features = ["ndarray", "std"], default-features = false}
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
clap = { version = "4.5", features = ["derive"] }
