[project]
name = "scientific-computing-rs"
version = "0.1.0"
description = "Project template for scientific computing in Rust with PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
dev = [
    # "rust-just>=1.40.0", # recommended for running custom commands
]

# tch-rs 0.20.x requires torch == 2.7.0 to be installed
torch = ["torch==2.7.0"]

[tool.uv.sources]
# Select the appropriate torch version based on the platform
torch = [
    { index = "torch-cpu", marker = "platform_system == 'Darwin'" },
    { index = "torch-gpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
# include dev, torch in the default group of dependencies
default-groups = ["dev", "torch"]